--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="qualquer-coisa">
         <nav>
-          <ul class="login-area">
+          <ul class="nav">
             <li>
               <a href="#">Features</a>
               <img
@@ -58,7 +58,7 @@
               <a href="#">About</a>
             </li>
           </ul>
-          <div class="login-area"> 
+          <div> 
             <ul class="login-area">
               <li>
                 <a href="#">Login</a>
