--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <span></span>
         </label>
       </div>
-      <div class="qualquer-coisa">
+      <div id="qualquer-coisa">
         <nav>
           <ul class="nav">
             <li>
