--- a/index.html
+++ b/index.html
@@ -36,20 +36,55 @@
         <nav>
           <ul class="nav">
             <li>
-              <a href="#">Features</a>
-              <img
+              <a href="#" id="features" >Features</a>
+              <div class="arrows">
+                <img
                 src="images/icon-arrow-down.svg"
-                class="arrow"
+                class="features-arrow-down"
                 alt="arrow down icon"
               />
+              <img src="images/icon-arrow-up.svg" class="features-arrow-up" alt="arrow up icon">
+              </div>
+                <ul id="features-dropdown">
+                  <li>
+                    <img src="images/icon-todo.svg" alt="todo icon">
+                    <a href="#">Todo List</a>
+                  </li>
+                  <li>
+                    <img src="images/icon-calendar.svg" alt="calendar icon">
+                    <a href="#">Calendar</a>
+                  </li>
+                  <li>
+                    <img src="images/icon-reminders.svg" alt="reminder icon">
+                    <a href="#">Reminders</a>
+                  </li>
+                  <li>
+                    <img src="images/icon-planning.svg" alt="planning icon">
+                    <a href="#">Planning</a>
+                  </li>
+                </ul>
             </li>
             <li>
-              <a href="#">Company</a>
-              <img
+              <a href="#" id="company">Company</a>
+              <div class="arrows">
+                <img
                 src="images/icon-arrow-down.svg"
-                class="arrow"
+                class="company-arrow-down"
                 alt="arrow down icon"
               />
+              <img src="images/icon-arrow-up.svg" class="company-arrow-up" alt="arrow up icon">
+              </div>
+              <ul id="company-dropdown">
+                <li>
+                  <a href="#">History</a>
+                </li>
+                <li>
+                  <a href="#">Our Team</a>
+                </li>
+                <li>
+                  <a href="#">Blog</a>
+                </li>
+              </ul>
             </li>
             <li>
               <a href="#">Careers</a>
