--- a/index.html
+++ b/index.html
@@ -35,44 +35,52 @@
       <div id="qualquer-coisa">
         <nav>
           <ul class="nav">
-            <li>
-              <a href="#" id="features" >Features</a>
+            <li class="features">
+              <a href="#" id="features">Features</a>
               <div class="arrows">
                 <img
-                src="images/icon-arrow-down.svg"
-                class="features-arrow-down"
-                alt="arrow down icon"
-              />
-              <img src="images/icon-arrow-up.svg" class="features-arrow-up" alt="arrow up icon">
+                  src="images/icon-arrow-down.svg"
+                  class="features-arrow-down"
+                  alt="arrow down icon"
+                />
+                <img
+                  src="images/icon-arrow-up.svg"
+                  class="features-arrow-up"
+                  alt="arrow up icon"
+                />
               </div>
-                <ul id="features-dropdown">
-                  <li>
-                    <img src="images/icon-todo.svg" alt="todo icon">
-                    <a href="#">Todo List</a>
-                  </li>
-                  <li>
-                    <img src="images/icon-calendar.svg" alt="calendar icon">
-                    <a href="#">Calendar</a>
-                  </li>
-                  <li>
-                    <img src="images/icon-reminders.svg" alt="reminder icon">
-                    <a href="#">Reminders</a>
-                  </li>
-                  <li>
-                    <img src="images/icon-planning.svg" alt="planning icon">
-                    <a href="#">Planning</a>
-                  </li>
-                </ul>
+              <ul id="features-dropdown">
+                <li>
+                  <img src="images/icon-todo.svg" alt="todo icon" />
+                  <a href="#">Todo List</a>
+                </li>
+                <li>
+                  <img src="images/icon-calendar.svg" alt="calendar icon" />
+                  <a href="#">Calendar</a>
+                </li>
+                <li>
+                  <img src="images/icon-reminders.svg" alt="reminder icon" />
+                  <a href="#">Reminders</a>
+                </li>
+                <li>
+                  <img src="images/icon-planning.svg" alt="planning icon" />
+                  <a href="#">Planning</a>
+                </li>
+              </ul>
             </li>
-            <li>
+            <li class="company">
               <a href="#" id="company">Company</a>
               <div class="arrows">
                 <img
-                src="images/icon-arrow-down.svg"
-                class="company-arrow-down"
-                alt="arrow down icon"
-              />
-              <img src="images/icon-arrow-up.svg" class="company-arrow-up" alt="arrow up icon">
+                  src="images/icon-arrow-down.svg"
+                  class="company-arrow-down"
+                  alt="arrow down icon"
+                />
+                <img
+                  src="images/icon-arrow-up.svg"
+                  class="company-arrow-up"
+                  alt="arrow up icon"
+                />
               </div>
               <ul id="company-dropdown">
                 <li>
@@ -93,7 +101,7 @@
               <a href="#">About</a>
             </li>
           </ul>
-          <div> 
+          <div>
             <ul class="login-area">
               <li>
                 <a href="#">Login</a>
